crates/daemon/tests/snapshots/cli_help__cli_help_chimes_enable.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Turn notification chimes on

Usage: mxr chimes enable [OPTIONS]

Options:
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
