crates/daemon/tests/snapshots/cli_help__cli_help_chimes_set.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Set the sound for one event

Usage: mxr chimes set [OPTIONS] <EVENT> <SOUND>

Arguments:
  <EVENT>  [possible values: new-mail, sent, archived, trashed, spam, snoozed, unsnoozed, reminder, error]
  <SOUND>  [possible values: none, bell, glass, pop, sent, archive, thud, alert]

Options:
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
