crates/daemon/tests/snapshots/cli_help__cli_help_chimes_status.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Show current chime settings

Usage: mxr chimes status [OPTIONS]

Options:
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
