crates/daemon/tests/snapshots/cli_help__cli_help_completions.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Generate shell completions

Usage: mxr completions <SHELL>

Arguments:
  <SHELL>

Options:
  -h, --help  Print help
