crates/daemon/tests/snapshots/cli_help__cli_help_config.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Configuration management

Usage: mxr config [COMMAND]

Commands:
  path  Show config file path
  edit  Open config in $EDITOR
  get   Get a config value
  set   Set a config value
  help  Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
