crates/daemon/tests/snapshots/cli_help__cli_help_config_edit.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Open config in $EDITOR

Usage: mxr config edit

Options:
  -h, --help  Print help
