crates/daemon/tests/snapshots/cli_help__cli_help_config_get.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Get a config value

Usage: mxr config get <KEY>

Arguments:
  <KEY>  Dotted key path (e.g. general.sync_interval, appearance.theme)

Options:
  -h, --help  Print help
