crates/daemon/tests/snapshots/cli_help__cli_help_config_path.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Show config file path

Usage: mxr config path

Options:
  -h, --help  Print help
